--- a/perfil.css
+++ b/perfil.css
@@ -354,3 +354,20 @@ input:checked + .slider::before {
     font-size: x-large;
     height: 60px;
 }
+#btnMostrarSenha {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 5px 25px;
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.1s ease;
+}
+
+#btnMostrarSenha:hover {
+    border-bottom: 5px solid #0f00e5;
+}
