--- a/Suporte.css
+++ b/Suporte.css
@@ -134,7 +134,7 @@ body {
     background-color: white;
     height: 300px;
     width: 500px;
-    margin-left: 35px;
+    margin-left: 100px;
     margin-right: px;
     margin-top: 20px;
     border-radius: 20px;
@@ -166,15 +166,15 @@ body {
 .divbackgroundperguntas {
 background-color: white;
 height: 1250px;
-width: 1040px;
+width: 1110px;
 border-radius: 20px;
-margin-left: 50px;
+margin-left: 110px;
 margin-top: 30px;
 padding-left: 30px;
 font-family: Arial, Helvetica, sans-serif;
 padding-top: 20px;
 }
-
+.linhadivisoria
 .perguntassuporte {
     display: flex;
 }
@@ -256,7 +256,7 @@ margin-top: 20px;
 }
 
 .contatodiretodiv {
-    margin-left: 35px;
+    margin-left: 90px;
     margin-top: 30px;
     padding-left: 20px;
     background-color: white;
@@ -286,11 +286,11 @@ margin-top: 20px;
     width: 500px;
     padding-left: 30px;
     padding-top: 24px;
-    margin-left: 35px;
+    margin-left: 90px;
 }
 .linhadivisoria {
     margin-top: 25px;
-    width: 980px;
+    width: 1030px;
 }
 .contatodireto {
     display: flex;
