--- a/DashBoard.css
+++ b/DashBoard.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 .header {
     display: flex;
     height: 120px;
@@ -80,61 +79,87 @@ body {
 
 .caixas1 {
     background-color: white;
-    font-size: 20px;
-    padding-left: 50px;
-    padding-right: 150px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-left: 300px;
     border-radius: 15px;
+    height: 170px;
+    width: 400px;
+    margin-left: 320px;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-size: 20px;
 }
 
-.caixas1 h2 {
+.caixas1 img {
+margin-left: 200px;
+height: 20px;
+width: 20px;
+}
+.caixas1 h2,.caixas2 h2,.caixas3 h2 {
     font-size: 15px;
-    padding-bottom: 20px;
+    padding-bottom:;
+    
 }
 .caixas2 {
     background-color: white;
-    font-size: 20px;
-    padding-left: 50px;
-    padding-right: 150px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-left: 150px;
     border-radius: 15px;
-}
-
-.caixas2 h2 {
+    height: 170px;
+    width: 400px;
+    margin-left: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
     font-size: 20px;
-    padding-bottom: 20px;
 }
-
-.caixas2 h2 {
-    font-size: 20px;
-    padding-bottom: 20px;
+.caixas2 img {
+    margin-left: 10px;
+    height: 20px;
+    width: 20px;
 }
 .caixas3 {
     background-color: white;
-    font-size: 20px;
-    padding-left: 50px;
-    padding-right: 150px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-left: 150px;
     border-radius: 15px;
-}
-
-.caixas3 h2 {
+    height: 170px;
+    width: 400px;
+    margin-left: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
     font-size: 20px;
-    padding-bottom: 20px;
+}
+.caixas3 img {
+    margin-left: 10px;
+
+}
+.alvodashboard {
+    height: 20px;
+    width: 20px;
+}
+.barraporcentagem {
+    width: 330px;
+    height: 10px;
+    border-radius: 5px;
+    margin-top: 50px;
 }
 
-.caixas3 h2 {
-    font-size: 20px;
-    padding-bottom: 20px;
+.p1 {
+    margin-top: 10px;
+}
+.p2 {
+    margin-top: 10px;
 }
 
-
+.c1 img {
+    width: 20px;
+    height: 20px;
+    margin-left:260px ;
+}
+.c2 img {
+    margin-left: 240px;
+}
+.c3 img {
+    margin-left: 280px;
+}
+.c1,.c2,.c3 {
+    display: flex;
+    width: 100px;
+}
 .foco {
     background-color: white;
     margin-left: 300px;
@@ -143,11 +168,9 @@ body {
     border-radius: 20px;
     padding: 30px;
 }
-
 .foco h3 {
     font-size: 25px;
 }
-
 .borda {
     border: 5px solid gray;
     padding: 20px;
