--- a/Suporte.css
+++ b/Suporte.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    background: rgb(211, 229, 247);
-    ;
+    background: #ebebf7;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -15,6 +15,7 @@ body {
     width: 120px;
     margin-left: 250px;
 }
+
 .BotoesAcesso3 {
     border: none;
     margin-left: 25px;
@@ -28,13 +29,16 @@ body {
     cursor: pointer;
     transition: all 2s ease;
 }
+
 .head h1 {
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 40px;
 }
+
 .BotoesAcesso3:hover {
     background-color: #1914a1;
 }
+
 .head {
     display: flex;
     position: fixed;
@@ -79,19 +83,17 @@ body {
     border-bottom: 5px solid #007be5;
 }
 
-body {
-    background-color: rgb(211, 229, 247);
-    font-family: Arial, Helvetica, sans-serif;
-}
+
 .maesuperior {
     display: flex;
     margin-left: 20px;
 }
+
 .centralsuporte {
     text-align: center;
     font-size: 25px;
     display: flex;
-    margin-top:30px ;
+    margin-top: 30px;
 }
 
 .centralsuporte img {
@@ -114,13 +116,15 @@ body {
     margin-top: 40px;
     margin-bottom: 30px;
 }
+
 .chat img {
     height: 70px;
     margin-top: 10px;
 }
+
 .chat button {
     background-color: #007be5;
-    width:400px;
+    width: 400px;
     border-radius: 10px;
     height: 50px;
     margin-top: 20px;
@@ -128,81 +132,93 @@ body {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     border: none;
-    
+
 }
+
 .chat {
     background-color: white;
     height: 300px;
     width: 500px;
-    margin-left: 100px;
-    margin-right: px;
+    margin-left: 37px;
     margin-top: 20px;
     border-radius: 20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
-    box-shadow: 0 16px 48px rgba(0,0,0,0.18);  
+    box-shadow: 0 16px 48px rgba(0, 0, 0, 0.18);
 }
 
 
 .pindividual {
     color: black;
 }
+
 .chat p {
     margin-top: 20px;
 }
+
 .p1 {
     color: rgb(54, 61, 61);
 }
+
 .p2 {
     color: rgb(54, 61, 61);
 }
+
 .maetodosuporte {
     display: flex;
 }
+
 .barradepesquisasuporte {
     display: flex;
 }
+
 .divbackgroundperguntas {
-background-color: white;
-height: 1250px;
-width: 1110px;
-border-radius: 20px;
-margin-left: 110px;
-margin-top: 30px;
-padding-left: 30px;
-font-family: Arial, Helvetica, sans-serif;
-padding-top: 20px;  
+    background-color: white;
+    height: 1250px;
+    width: 1110px;
+    border-radius: 20px;
+    margin-left: 55px;
+    margin-top: 30px;
+    padding-left: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 20px;
 }
 
 .perguntassuporte {
     display: flex;
 }
+
 .perguntassuporte p {
     margin-top: 5px;
     font-size: 20px;
     margin-left: 10px;
 }
+
 .perguntassuporte img {
     height: 30px;
 }
+
 .encontresuporte {
     color: rgb(54, 61, 61);
     margin-top: 13px;
     font-size: 21px;
 }
+
 .barrapesquisasuporte {
     display: flex;
     margin-top: 30px;
 }
+
 .barrapesquisasuporte input {
-    border-radius:10px;
+    border-radius: 10px;
     border-color: rgb(54, 61, 61);
     padding: 13px;
     width: 450px;
     border: 1px solid #b7b7b7;
     font-size: 18px;
 }
+
 .barrapesquisasuporte button {
     border-radius: 10px;
     text-align: center;
@@ -224,17 +240,21 @@ padding-top: 20px;
     height: 50px;
     width: 80px;
 }
+
 .investimentobuttonsuporte {
     margin-left: 20px;
     width: 140px;
 }
+
 .contasuporte {
     display: flex;
     margin-top: 35px;
 }
+
 .contasuporte img {
     height: 28px;
 }
+
 .contasuporte p {
     margin-top: 3px;
     margin-left: 10px;
@@ -242,11 +262,11 @@ padding-top: 20px;
 }
 
 .divcontasuporte {
-margin-left: 30px;
-font-size: 20px;
-margin-top: 20px;
+    margin-left: 30px;
+    font-size: 20px;
+    margin-top: 20px;
 }
-    
+
 
 .texto2sp {
     margin-top: 19px;
@@ -256,7 +276,7 @@ margin-top: 20px;
 }
 
 .contatodiretodiv {
-    margin-left: 90px;
+    margin-left: 30px;
     margin-top: 30px;
     padding-left: 20px;
     background-color: white;
@@ -266,9 +286,10 @@ margin-top: 20px;
     padding-left: 30px;
     padding-top: 24px;
 }
+
 .contatodiretodiv button {
     background-color: #007be5;
-    width:400px;
+    width: 400px;
     margin-left: 30px;
     border-radius: 10px;
     height: 50px;
@@ -278,6 +299,7 @@ margin-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
     border: none;
 }
+
 .statusmensagemdiv {
     margin-top: 20px;
     background-color: white;
@@ -286,23 +308,28 @@ margin-top: 20px;
     width: 500px;
     padding-left: 30px;
     padding-top: 24px;
-    margin-left: 90px;
+    margin-left: 30px;
 }
+
 .linhadivisoria {
     margin-top: 25px;
     width: 1030px;
 }
+
 .contatodireto {
     display: flex;
 }
+
 .contatodireto img {
     height: 30px;
 }
+
 .contatodireto p {
     margin-top: 5px;
     font-size: 20px;
     margin-left: 10px;
 }
+
 .mensagemcontatodiv {
     margin-top: 13px;
     color: rgb(167, 167, 167);
@@ -310,14 +337,15 @@ margin-top: 20px;
     font-size: 20px;
     font-family: "Nunito Sans", sans-serif;
 }
+
 .nomecontatodireto {
-    font-size:19px;
+    font-size: 19px;
     margin-top: 20px;
     color: #474747;
 }
 
 .divcontatodireto input {
-    border-radius:10px;
+    border-radius: 10px;
     border-color: rgb(54, 61, 61);
     padding: 13px;
     width: 435px;
@@ -326,43 +354,52 @@ margin-top: 20px;
     margin-top: 10px;
     margin-bottom: 20px;
 }
+
 .mensagemstatus {
     color: #919191;
     font-size: 18px;
     margin-top: 35px;
     font-family: "Nunito Sans", sans-serif;
-}   
-.linhastatus{
+}
+
+.linhastatus {
     margin-top: 20px;
     width: 440px;
     height: 2px;
     background-color: rgb(161, 161, 161);
 }
+
 .atualizaçãostatus {
     color: #919191;
     font-size: 16px;
     margin-top: 20px;
     text-align: center;
 }
+
 .platdiv {
     display: flex;
 }
+
 .platdiv img {
     height: 30px;
     margin-top: 33px;
     margin-left: 200px;
 }
+
 .platdiv2 {
     display: flex;
 }
+
 .platdiv2 img {
     height: 30px;
     margin-top: 33px;
     margin-left: 160px;
 }
+
 .platdiv3 {
     display: flex;
 }
+
 .platdiv3 img {
     height: 30px;
     margin-top: 33px;
