--- a/EsqueciMinhaSenha.css
+++ b/EsqueciMinhaSenha.css
@@ -13,7 +13,7 @@
     margin-top: 20px;
     border-radius: 20px;
     text-align: center;
-    margin-left: 280px;
+    margin-left: 600px;
     margin-right: 150px;
     height: 400px;
     width: 750px;
@@ -40,7 +40,7 @@
     font-size: 20px;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 470px;
+    margin-left: 770px;
     margin-top: 20px
 }
 
@@ -138,15 +138,19 @@
 .caixaprecisadeajuda {
     color: white;
     background-color: #007BE5;
-    height: 100px;
+    height: 150px;
     width: 750px;
     text-align: center;
-    margin-left: 280px;
+    margin-left: 600px;
     margin-right: 280px;
     border-radius: 20px;
-    margin-top: 20px;
+    margin-top: 40px;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 35px;
+    font-size: 20px;
+}
+.caixaprecisadeajuda p {
+    
 }
 
 .ai {
