--- a/Login.css
+++ b/Login.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
     display: flex;
     justify-content: center;
@@ -26,7 +26,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 400px;
+    max-width: 700px;
     text-align: center;
     box-sizing: border-box;
 }
@@ -151,4 +151,9 @@ form input:focus {
 }
 .img {
     border-radius: 10px;
+    width: 100px;
+}
+.h1top {
+    margin-top: 25px;
+    margin-left: 20px;
 }
