--- a/DashBoard.css
+++ b/DashBoard.css
@@ -75,7 +75,7 @@
     margin-top: 20px;
     height: 450px;
     width: 1600px;
-    margin-left: 30px;
+    margin-left: 125px;
     border-radius: 10px;
 }
 
@@ -218,7 +218,7 @@ body {
 
 .pagina {
     margin-top: 30px;
-    margin-left: 30px;
+    margin-left: 130px;
     font-size: 30px;
     margin-top: 170px;
 }
@@ -259,7 +259,7 @@ body {
     background-color: white;
     border-radius: 15px;
     height: 170px;
-    width: 500px;
+    width: 520px;
     padding-left: 20px;
     padding-top: 20px;
     font-size: 20px;
@@ -268,7 +268,7 @@ body {
 }
 
 .caixas1 {
-    margin-left: 30px;
+    margin-left: 125px;
 }
 
 .caixas2,
@@ -319,15 +319,18 @@ body {
 }
 
 .botaoperfil {
-    border: 1px solid #888;
+    border:none;
     width: 60px;
     height: 60px;
     border-radius: 5px;
-    margin-left: 1200px;
+    margin-left: 1250px;
     background-color: transparent;
     transition: all 3s;
+    margin-top: 10px;
 }
-
+.iconeperfil {
+    margin-top: 60px;
+}
 .botaot {
     display: flex;
 }
@@ -397,7 +400,7 @@ body {
 }
 
 .ultimo {
-    background: rgb(211, 206, 206);
+    background: white;
     margin-top: 20px;
     height: 180px;
     width: 1600px;
@@ -405,7 +408,7 @@ body {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    margin-left: 30px;
+    margin-left: 125px;
 }
 
 .ultimo h2 {
