--- a/perfil.css
+++ b/perfil.css
@@ -169,8 +169,8 @@ main {
     display: flex;
 }
 .iconeedit {
-    margin-left: 1150px;
-    border: 1px solid #888;
+    margin-left: 1450px;
+    border:none;
     width: 50px;
     height: 50px;
     border-radius: 5px;
