--- a/perfil.css
+++ b/perfil.css
@@ -31,7 +31,8 @@ body {
 
 .head h1 {
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 40px;
+    margin-top: 33px;
+    color: black;
 }
 
 .BotoesAcesso {
@@ -340,14 +341,14 @@ input:checked + .slider:before {
     width: 60px;
     height: 60px;
     border-radius: 5px;
+    margin-left: 1695px;
     background-color: transparent;
     transition: all 3s;
 }
 .botaoperfil img {
     width: 50px;
-    height: 50px ;
+    height: 50px;
 }
-
 .slider::before {
     content: '';
     position: absolute;
@@ -401,4 +402,8 @@ input:checked + .slider::before {
 }
 .esse {
     border: 5px solid red;
+}
+.botaoperfil
+.olhodiv {
+    display: flex;
 }
