--- a/Login.css
+++ b/Login.css
@@ -100,6 +100,7 @@ form input:focus {
     color: #1700c2;
     text-decoration: none;
     font-size: 0.9rem;
+    cursor: pointer;
     transition: text-decoration 0.3s;
 }
 
