--- a/DashBoard.css
+++ b/DashBoard.css
@@ -147,18 +147,22 @@
 
 .op1 p {
     margin-left: 1290px;
+    color: #007be5;
 }
 
 .op2 p {
     margin-left: 1415px;
+    color: #007be5;
 }
 
 .op3 p {
     margin-left: 1290px;
+    color: #007be5;
 }
 
 .op4 p {
     margin-left: 1395px;
+    color: #007be5;
 }
 
 
@@ -224,7 +228,7 @@ body {
     font-size: 30px;
     margin-top: 170px;
 }
-
+.co
 .conteiners {
     display: flex;
     margin-top: 30px;
