--- a/Login.css
+++ b/Login.css
@@ -10,7 +10,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+    background: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +19,20 @@ body {
     color: var(--text-color);
     flex-direction: column;
 }
-
+.videofundo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    opacity: 0.4;
+    object-fit: cover;
+    filter: brightness(0.8);
+}
 .login {
     background-color: var(--container-bg);
     padding: 40px;
@@ -29,6 +42,7 @@ body {
     max-width: 700px;
     text-align: center;
     box-sizing: border-box;
+    z-index: 1;
 }
 
 .logo {
