--- a/Cadastro.css
+++ b/Cadastro.css
@@ -11,10 +11,25 @@
     font-family: Arial, Helvetica, sans-serif;
     transition: box-shadow 0.3s;
     justify-content: center;
+    z-index: 1;
 }
 .caixa_informacoes:hover {
     box-shadow: 0 16px 48px rgba(0, 0, 0, 0.25);
 
+}
+.videofundo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    opacity: 0.4;
+    object-fit: cover;
+    filter: brightness(0.8);
 }
 
 @media (max-width: 768px) {
@@ -159,7 +174,7 @@
 }
 
 .corpo {
-    background-color: #140de9;
+    background-color: #3d38f5;
 }
 
 .titulo {
