--- a/EsqueciMinhaSenha.css
+++ b/EsqueciMinhaSenha.css
@@ -10,15 +10,30 @@
 
 .Caixaminhasenha {
     background-color: white;
-    margin-top: 20px;
+    margin-top: 80px;
     border-radius: 20px;
     text-align: center;
     margin-left: 600px;
     margin-right: 150px;
-    height: 400px;
+    height: 425px;
     width: 750px;
     font-family: 'Times New Roman', Times, serif;
+    z-index: 1;
 
+}
+.videofundo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    opacity: 0.4;
+    object-fit: cover;
+    filter: brightness(0.8);
 }
 
 .Caixaminhasenha img {
@@ -60,7 +75,8 @@
 }
 
 .chapou {
-    margin-top: 10px;
+    margin-top: 25px;
+    font-size: 20px;
 }
 
 .minhasenhavoltar {
@@ -139,13 +155,13 @@
 .caixaprecisadeajuda {
     color: white;
     background-color: #213dbb;
-    height: 150px;
+    height: 170px;
     width: 750px;
     text-align: center;
     margin-left: 600px;
     margin-right: 280px;
     border-radius: 20px;
-    margin-top: 40px;
+    margin-top: 70px;
     text-align: center;
     padding-top: 35px;
     font-size: 20px;
@@ -154,4 +170,10 @@
 
 .ai {
     text-decoration: none;
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+.email {
+    margin-top: 20px;
 }
