--- a/Login.css
+++ b/Login.css
@@ -10,7 +10,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: #000000;
+    background: #3d38f5;
     display: flex;
     justify-content: center;
     align-items: center;
